--- a/spotify_listening_habits_analysis.ipynb
+++ b/spotify_listening_habits_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyND0wRR9kHw39p00NGER2qw",
+      "authorship_tag": "ABX9TyMxJ0ThBMfoNmIVYyB8Bi8g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "620eMVD-8Dkn"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,12 +161,16 @@
       "metadata": {
         "id": "FG6UycpbDrxW"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# ==============================================================================\n",
+        "# DATAFRAME SEPARATION (LISTENED X SKIPPED)\n",
+        "# ==============================================================================\n",
+        "\n",
         "def separate_listens_from_skips(df: pd.DataFrame, min_seconds_threshold: int = 30) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
         "    \"\"\"\n",
         "    Separates the DataFrame into two: one for listened tracks and one for skipped tracks.\n",
@@ -199,7 +203,7 @@
       "metadata": {
         "id": "Vpeh8viGPzJ_"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +245,7 @@
         "id": "eKgoLesy9UKO",
         "outputId": "d601d6cc-bfbf-4ed0-da59-b99dd50ade4d"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
