implementação da função calculate_top_10_tracks

--- a/spotify_listening_habits_analysis.ipynb
+++ b/spotify_listening_habits_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxJ0ThBMfoNmIVYyB8Bi8g",
+      "authorship_tag": "ABX9TyNA6rHwmhhJn2qu/v9bIvQ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,17 +57,17 @@
         "        A single DataFrame containing all the combined streaming history data.\n",
         "        Returns an empty DataFrame if no files are found.\n",
         "    \"\"\"\n",
-        "    print(f\"Searching for files with pattern: '{path_pattern}'...\")\n",
+        "    #print(f\"Searching for files with pattern: '{path_pattern}'...\")\n",
         "    file_list: List[str] = glob.glob(path_pattern)\n",
         "\n",
         "    if not file_list:\n",
         "        print(\"Warning: No files found matching the pattern. Please check the file path.\")\n",
         "        return pd.DataFrame() # Return an empty DataFrame if no files are found\n",
         "\n",
-        "    print(f\"Found {len(file_list)} files: {file_list}\")\n",
+        "    #print(f\"Found {len(file_list)} files: {file_list}\")\n",
         "\n",
         "    dataframe_list: List[pd.DataFrame] = []\n",
-        "    print(\"\\nReading and processing each file...\")\n",
+        "    #print(\"\\nReading and processing each file...\")\n",
         "    for current_file in file_list:\n",
         "        try:\n",
         "            temp_df = pd.read_json(current_file)\n",
@@ -76,16 +76,16 @@
         "        except Exception as e:\n",
         "            print(f\"  - Error loading {current_file}: {e}\")\n",
         "\n",
-        "    print(\"\\nMerging all data into a single table...\")\n",
+        "    #print(\"\\nMerging all data into a single table...\")\n",
         "    full_history_df = pd.concat(dataframe_list, ignore_index=True)\n",
-        "    print(\"Merge completed successfully!\")\n",
+        "    #print(\"Merge completed successfully!\")\n",
         "\n",
         "    return full_history_df"
       ],
       "metadata": {
         "id": "620eMVD-8Dkn"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -101,13 +101,13 @@
         "\n",
         "def _convert_endtime_to_datetime(df: pd.DataFrame) -> pd.DataFrame:\n",
         "    \"\"\"Converts the 'endTime' column from object to datetime type.\"\"\"\n",
-        "    print(\"Converting 'endTime' to datetime...\")\n",
+        "    #print(\"Converting 'endTime' to datetime...\")\n",
         "    df['endTime'] = pd.to_datetime(df['endTime'])\n",
         "    return df\n",
         "\n",
         "def _add_time_played_features(df: pd.DataFrame) -> pd.DataFrame:\n",
         "    \"\"\"Creates 'secondsPlayed', 'minutesPlayed', 'hoursPlayed', and 'daysPlayed' columns from 'msPlayed'.\"\"\"\n",
-        "    print(\"Creating time played features (seconds, minutes, hours, days)...\")\n",
+        "    #print(\"Creating time played features (seconds, minutes, hours, days)...\")\n",
         "    df['secondsPlayed'] = df['msPlayed'] / 1000\n",
         "    df['minutesPlayed'] = df['secondsPlayed'] / 60\n",
         "    df['hoursPlayed'] = df['minutesPlayed'] / 60\n",
@@ -116,20 +116,20 @@
         "\n",
         "def _check_for_null_values(df: pd.DataFrame) -> pd.DataFrame:\n",
         "    \"\"\"Checks for and reports null values in the DataFrame.\"\"\"\n",
-        "    print(\"Checking for and removing null values...\")\n",
+        "    #print(\"Checking for and removing null values...\")\n",
         "    null_counts = df.isnull().sum()\n",
         "    nulls_to_report = null_counts[null_counts > 0]\n",
         "\n",
         "    if nulls_to_report.empty:\n",
-        "        print(\"--> No null values found.\")\n",
+        "        #print(\"--> No null values found.\")\n",
         "        return df\n",
         "\n",
-        "    print(\"--> Null values found in the following columns:\")\n",
+        "    #print(\"--> Null values found in the following columns:\")\n",
         "    print(nulls_to_report)\n",
         "    initial_rows = len(df)\n",
         "    df = df.dropna()\n",
         "    rows_removed = initial_rows - len(df)\n",
-        "    print(f\"--> {rows_removed} row(s) with null values were removed.\")\n",
+        "    #print(f\"--> {rows_removed} row(s) with null values were removed.\")\n",
         "    return df\n",
         "\n",
         "# ------------------------------------------------------------------------------\n",
@@ -150,7 +150,7 @@
         "    pd.DataFrame\n",
         "        A cleaned and prepared DataFrame ready for analysis.\n",
         "    \"\"\"\n",
-        "    print(\"\\n--- Starting Data Preparation Pipeline ---\")\n",
+        "    #print(\"\\n--- Starting Data Preparation Pipeline ---\")\n",
         "    df = (df.pipe(_convert_endtime_to_datetime)\n",
         "            .pipe(_add_time_played_features)\n",
         "            .pipe(_check_for_null_values)\n",
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "FG6UycpbDrxW"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
         "    Tuple[pd.DataFrame, pd.DataFrame]\n",
         "        A tuple containing two DataFrames: (listened_df, skipped_df).\n",
         "    \"\"\"\n",
-        "    print(f\"\\n--- Separating Skips vs. Listens (Threshold: {min_seconds_threshold} sec) ---\")\n",
+        "    #print(f\"\\n--- Separating Skips vs. Listens (Threshold: {min_seconds_threshold} sec) ---\")\n",
         "\n",
         "    # Create the DataFrame for listened tracks\n",
         "    listened_df = df[df['secondsPlayed'] > min_seconds_threshold].copy()\n",
@@ -195,7 +195,7 @@
         "    # Create the DataFrame for skipped tracks\n",
         "    skipped_df = df[df['secondsPlayed'] <= min_seconds_threshold].copy()\n",
         "\n",
-        "    print(f\"--> Main analysis set (listened_df) created with {len(listened_df)} tracks.\")\n",
+        "    print(f\"\\n--> Main analysis set (listened_df) created with {len(listened_df)} tracks.\")\n",
         "    print(f\"--> Skips analysis set (skipped_df) created with {len(skipped_df)} tracks.\")\n",
         "\n",
         "    return listened_df, skipped_df"
@@ -203,7 +203,50 @@
       "metadata": {
         "id": "Vpeh8viGPzJ_"
       },
-      "execution_count": null,
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calculate_top_10_tracks(df: pd.DataFrame) -> pd.DataFrame:\n",
+        "    \"\"\"\n",
+        "    Calculates the top 10 most listened tracks from the DataFrame based on the count\n",
+        "    of times each track was played.\n",
+        "\n",
+        "    Parameters:\n",
+        "    -----------\n",
+        "    df : pd.DataFrame\n",
+        "        The DataFrame containing the listened tracks data. Assumes it has\n",
+        "        'trackName' and 'artistName' columns.\n",
+        "\n",
+        "    Returns:\n",
+        "    --------\n",
+        "    pd.DataFrame\n",
+        "        A DataFrame with the top 10 tracks, showing 'trackName', 'artistName',\n",
+        "        and 'listenCount', sorted in descending order of listen count.\n",
+        "        Returns an empty DataFrame if the input DataFrame is empty.\n",
+        "    \"\"\"\n",
+        "    #print(\"\\n--- Calculating Top 10 Most Listened Tracks ---\")\n",
+        "\n",
+        "    if df.empty:\n",
+        "        print(\"Warning: Input DataFrame is empty. Cannot calculate top tracks.\")\n",
+        "        return pd.DataFrame()\n",
+        "\n",
+        "    # Group by track name and artist name and count the occurrences\n",
+        "    top_tracks = df.groupby(['trackName', 'artistName']).size().reset_index(name='listenCount')\n",
+        "\n",
+        "    # Sort by the count in descending order and take the top 10\n",
+        "    top_tracks = top_tracks.sort_values(by='listenCount', ascending=False).head(10)\n",
+        "\n",
+        "    print(\"Top 10 tracks calculated successfully.\")\n",
+        "\n",
+        "    return top_tracks"
+      ],
+      "metadata": {
+        "id": "9DQQ60GXAGCW"
+      },
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -219,65 +262,59 @@
         "    SPOTIFY_FILE_PATTERN = 'StreamingHistory*.json'\n",
         "    MIN_SECONDS_FOR_LISTEN = 5\n",
         "\n",
-        "    # --- STAGE 1: Load Data ---\n",
+        "    # Load Data ---\n",
         "    raw_df = load_and_merge_spotify_history(path_pattern=SPOTIFY_FILE_PATTERN)\n",
         "\n",
         "    if not raw_df.empty:\n",
-        "        # --- STAGE 2: Preprocess Data ---\n",
+        "        # Preprocess Data ---\n",
         "        preprocessed_df = preprocess_spotify_data(raw_df)\n",
         "\n",
-        "        # --- STAGE 3: Separate Data ---\n",
+        "        # Separate Data ---\n",
         "        listened_df, skipped_df = separate_listens_from_skips(\n",
         "            preprocessed_df,\n",
         "            min_seconds_threshold=MIN_SECONDS_FOR_LISTEN\n",
         "        )\n",
         "\n",
-        "        # --- STAGE 4: Final Verification ---\n",
-        "        print(\"\\n--- Project Execution Summary ---\")\n",
-        "        print(f\"Initial raw data loaded with {len(raw_df)} rows.\")\n",
-        "        print(f\"Final 'listened_df' for analysis has {len(listened_df)} rows.\")\n",
-        "        print(f\"Final 'skipped_df' for analysis has {len(skipped_df)} rows.\")"
+        "        if not listened_df.empty:\n",
+        "            top_10_tracks_df = calculate_top_10_tracks(listened_df)\n",
+        "        else:\n",
+        "            print(\"'listened_df' is empty. No tracks to analyze for top plays.\")\n",
+        "\n",
+        "        print(top_10_tracks_df)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eKgoLesy9UKO",
-        "outputId": "d601d6cc-bfbf-4ed0-da59-b99dd50ade4d"
+        "outputId": "817e44e3-53f6-4e60-de7c-d57503ee9b69"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Searching for files with pattern: 'StreamingHistory*.json'...\n",
-            "Found 3 files: ['StreamingHistory_music_2.json', 'StreamingHistory_music_0.json', 'StreamingHistory_music_1.json']\n",
-            "\n",
-            "Reading and processing each file...\n",
             "  - Successfully loaded StreamingHistory_music_2.json\n",
-            "  - Successfully loaded StreamingHistory_music_0.json\n",
             "  - Successfully loaded StreamingHistory_music_1.json\n",
-            "\n",
-            "Merging all data into a single table...\n",
-            "Merge completed successfully!\n",
-            "\n",
-            "--- Starting Data Preparation Pipeline ---\n",
-            "Converting 'endTime' to datetime...\n",
-            "Creating time played features (seconds, minutes, hours, days)...\n",
-            "Checking for and removing null values...\n",
-            "--> No null values found.\n",
+            "  - Successfully loaded StreamingHistory_music_0.json\n",
             "\n",
             "--- Data Preparation Pipeline Finished! ---\n",
             "\n",
-            "--- Separating Skips vs. Listens (Threshold: 5 sec) ---\n",
             "--> Main analysis set (listened_df) created with 21921 tracks.\n",
             "--> Skips analysis set (skipped_df) created with 6472 tracks.\n",
-            "\n",
-            "--- Project Execution Summary ---\n",
-            "Initial raw data loaded with 28393 rows.\n",
-            "Final 'listened_df' for analysis has 21921 rows.\n",
-            "Final 'skipped_df' for analysis has 6472 rows.\n"
+            "Top 10 tracks calculated successfully.\n",
+            "                             trackName     artistName  listenCount\n",
+            "2564                    Seja Bem-Vinda          Niink          222\n",
+            "2116                 Os Menino da Nova  Supernova Ent          182\n",
+            "1812                  Mine - Live/2011   Taylor Swift          178\n",
+            "812   Devolve as Correntes / Invisível          Veigh          140\n",
+            "3082         VADIA (feat. Veigh & G.A)  Supernova Ent          138\n",
+            "871       Drops Of Jupiter - Live/2011   Taylor Swift          134\n",
+            "427                     Bolsa de Ombro          Veigh          130\n",
+            "50           6AM NA COHAB - interlúdio          Veigh          125\n",
+            "2903                        The Bolter   Taylor Swift          115\n",
+            "1134                     Foto do Corte          Veigh          112\n"
           ]
         }
       ]
