alteração da função calculate_top_10_tracks para calculate_top_tracks

--- a/spotify_listening_habits_analysis.ipynb
+++ b/spotify_listening_habits_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNA6rHwmhhJn2qu/v9bIvQ3",
+      "authorship_tag": "ABX9TyMhvkG/V2cMxOQsAmUkIw2n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "620eMVD-8Dkn"
       },
-      "execution_count": 30,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "FG6UycpbDrxW"
       },
-      "execution_count": 31,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -203,15 +203,15 @@
       "metadata": {
         "id": "Vpeh8viGPzJ_"
       },
-      "execution_count": 32,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def calculate_top_10_tracks(df: pd.DataFrame) -> pd.DataFrame:\n",
+        "def calculate_top_tracks(df: pd.DataFrame, top_value: int = 10) -> pd.DataFrame:\n",
         "    \"\"\"\n",
-        "    Calculates the top 10 most listened tracks from the DataFrame based on the count\n",
+        "    Calculates the top `top_value` most listened tracks from the DataFrame based on the count\n",
         "    of times each track was played.\n",
         "\n",
         "    Parameters:\n",
@@ -219,11 +219,13 @@
         "    df : pd.DataFrame\n",
         "        The DataFrame containing the listened tracks data. Assumes it has\n",
         "        'trackName' and 'artistName' columns.\n",
+        "    top_value : int, optional\n",
+        "        The number of top tracks to return. Must be a positive integer. Defaults to 10.\n",
         "\n",
         "    Returns:\n",
         "    --------\n",
         "    pd.DataFrame\n",
-        "        A DataFrame with the top 10 tracks, showing 'trackName', 'artistName',\n",
+        "        A DataFrame with the top `top_value` tracks, showing 'trackName', 'artistName',\n",
         "        and 'listenCount', sorted in descending order of listen count.\n",
         "        Returns an empty DataFrame if the input DataFrame is empty.\n",
         "    \"\"\"\n",
@@ -233,11 +235,17 @@
         "        print(\"Warning: Input DataFrame is empty. Cannot calculate top tracks.\")\n",
         "        return pd.DataFrame()\n",
         "\n",
-        "    # Group by track name and artist name and count the occurrences\n",
-        "    top_tracks = df.groupby(['trackName', 'artistName']).size().reset_index(name='listenCount')\n",
+        "    if not isinstance(top_value, int) or top_value <= 0:\n",
+        "        raise ValueError(\"Parameter 'top_value' must be a positive integer.\")\n",
         "\n",
-        "    # Sort by the count in descending order and take the top 10\n",
-        "    top_tracks = top_tracks.sort_values(by='listenCount', ascending=False).head(10)\n",
+        "    # Group by track name and artist name and count the occurrences\n",
+        "    top_tracks = (\n",
+        "        df.groupby(['trackName', 'artistName'])\n",
+        "          .size()\n",
+        "          .reset_index(name='listenCount')\n",
+        "          .sort_values(by=['listenCount', 'trackName', 'artistName'], ascending=[False, True, True])\n",
+        "          .head(top_value)\n",
+        "    )\n",
         "\n",
         "    print(\"Top 10 tracks calculated successfully.\")\n",
         "\n",
@@ -246,7 +254,7 @@
       "metadata": {
         "id": "9DQQ60GXAGCW"
       },
-      "execution_count": 33,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -276,20 +284,20 @@
         "        )\n",
         "\n",
         "        if not listened_df.empty:\n",
-        "            top_10_tracks_df = calculate_top_10_tracks(listened_df)\n",
+        "            top_tracks_df = calculate_top_tracks(listened_df, top_value=5)\n",
         "        else:\n",
         "            print(\"'listened_df' is empty. No tracks to analyze for top plays.\")\n",
         "\n",
-        "        print(top_10_tracks_df)\n"
+        "        print(top_tracks_df)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eKgoLesy9UKO",
-        "outputId": "817e44e3-53f6-4e60-de7c-d57503ee9b69"
+        "outputId": "279e8a37-09b7-49e1-caf9-50e4441911ad"
       },
-      "execution_count": 36,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,12 +317,7 @@
             "2116                 Os Menino da Nova  Supernova Ent          182\n",
             "1812                  Mine - Live/2011   Taylor Swift          178\n",
             "812   Devolve as Correntes / Invisível          Veigh          140\n",
-            "3082         VADIA (feat. Veigh & G.A)  Supernova Ent          138\n",
-            "871       Drops Of Jupiter - Live/2011   Taylor Swift          134\n",
-            "427                     Bolsa de Ombro          Veigh          130\n",
-            "50           6AM NA COHAB - interlúdio          Veigh          125\n",
-            "2903                        The Bolter   Taylor Swift          115\n",
-            "1134                     Foto do Corte          Veigh          112\n"
+            "3082         VADIA (feat. Veigh & G.A)  Supernova Ent          138\n"
           ]
         }
       ]
